# Mu-S-I-C-A

./: .gitignore  LICENSE  README.md  _config.yml  index.md
PhaseI/audioView/: CMakeLists.txt
PhaseI/audioView/build2/: AudioView  CMakeCache.txt  Makefile  cmake_install.cmake
PhaseI/audioView/src/: AudioView.cpp  AudioView.hpp  audioDriver.cpp
PhaseI/opencv_example/: CMakeLists.txt
PhaseI/opencv_example/build2/: CMakeCache.txt  DisplayIMG  cmake_install.cmake  stftBasic
PhaseI/opencv_example/src/: dft_example.cpp  stft_example.cpp  test_plot.cpp
PhaseII/testMLPack/: CMakeLists.txt
PhaseII/testMLPack/build2/: cmake_install.cmake  cov.csv
PhaseII/testMLPack/src/: convolutionalNN.cpp  convolutionalNN_beforeChanges.cpp  data.csv
PhaseIII/testMLPack/: buildWalkThrough.txt
PhaseIII/testMLPack/src/: convolutionalNN.cpp  test.cpp
